src/scss/customize/header-style-wide.scss
@import '../common/_functions';
@import '../common/_mixins';

.main-navigation {
  margin: 0 auto;

  &__wrapper {
    --v: var(--header-wide-vertical-padding, 20px);
    align-items: center;
    justify-content: space-between;
    padding: var(--v) 4px var(--v) get_clamp(10, 20, 320, 375);
    width: 100%;
    max-width: max(var(--site-width), 1440px);

    @include bp(1024px) {
      padding: var(--v) 40px;
    }
  }
}

.wide-header-logo {
  margin-right: 1.5rem;

  .custom-logo {
    display: block;
    height: var(--header-logo-height);
    max-height: var(--header-logo-height);
    width: fit-content;
    object-fit: contain;
  }
}

.wide-header-identity {
  flex: 0 1 auto;
  margin-right: 1.5rem;

  &:not(._no-text-shadow) {
    text-shadow: var(--site-title-text-shadow);
  }

  &__title {
    color: var(--site-title-heading-color);
    font: 900 var(--site-title-font-size)/1 var(--ff-site-title);
  }

  &__tagline {
    color: var(--site-title-tagline-color);
    font: 500 var(--site-title-tagline-font-size)/1 var(--ff-site-title);
    white-space: nowrap;
    margin-top: .5em;
  }
}

